objects/project_cloud__Allocation_Group__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Allocated_Override_Load__c</fullName>
        <label>Allocated Override Load</label>
        <summarizedField>project_cloud__Allocation__c.project_cloud__Load_Override__c</summarizedField>
        <summaryForeignKey>project_cloud__Allocation__c.project_cloud__Allocation_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Allocation_Summary__c</fullName>
        <label>Allocation Summary</label>
        <referenceTo>project_cloud__Allocation_Summary__c</referenceTo>
        <relationshipLabel>Allocation Groups</relationshipLabel>
        <relationshipName>Allocation_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Balanced_Hours_Day__c</fullName>
        <formula>project_cloud__Allocation_Summary__r.project_cloud__Balanced_Hours_Day__c * BLANKVALUE(project_cloud__Load_Override__c * project_cloud__Allocation_Summary__r.project_cloud__Hours_Day__c, project_cloud__Allocation_Summary__r.project_cloud__Load_Unit__c)</formula>
        <label>Balanced Hours Per Day (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <formula>project_cloud__Allocation_Summary__r.project_cloud__End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End (Calculated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Fully_Allocated__c</fullName>
        <formula>project_cloud__Total_Subscriptions__c &gt; 0 || project_cloud__Allocated_Override_Load__c &gt;= 1.0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fully Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Day__c</fullName>
        <formula>BLANKVALUE(project_cloud__Load_Override__c, project_cloud__Allocation_Summary__r.project_cloud__Load_Unit__c) * project_cloud__Allocation_Summary__r.project_cloud__Hours_Day__c</formula>
        <label>Hours Per Day (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <summarizedField>project_cloud__Allocation__c.project_cloud__Hours_Worked__c</summarizedField>
        <summaryForeignKey>project_cloud__Allocation__c.project_cloud__Allocation_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Load_Override__c</fullName>
        <label>Load (Override)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Load__c</fullName>
        <formula>IF(ISBLANK(project_cloud__Load_Override__c), 1 / project_cloud__Allocation_Summary__r.project_cloud__Balanced_Allocations__c, project_cloud__Load_Override__c)</formula>
        <label>Load (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <formula>project_cloud__Allocation_Summary__r.project_cloud__Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start (Calculated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Total_Subscriptions__c</fullName>
        <label>Total Subscriptions</label>
        <summaryFilterItems>
            <field>project_cloud__Allocation__c.project_cloud__Load_Override__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>project_cloud__Allocation__c.project_cloud__Allocation_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Allocation Groups</relationshipLabel>
        <relationshipName>Allocation_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__isPrimary__c</fullName>
        <formula>project_cloud__Allocation_Summary__r.project_cloud__Project_Task__r.project_cloud__Work_Type__c == project_cloud__Work_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Allocation Group</label>
    <nameField>
        <displayFormat>AG-{0000000000}</displayFormat>
        <label>Allocation Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>